[package]
name = "outagefs"
version = "0.1.0"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "MIT"
description = "FUSE filesystem and tools to emulate and test behaviors on power outage."
keywords = ["fuse", "testing"]
repository = "https://github.com/quark-zju/outagefs"
categories = ["filesystem"]
readme = "README.md"
build = "build.rs"

[dependencies]
byteorder = "1"
env_logger = "0.7"
libc = "0.2"
log = "0.4"
rand = "0.7"
serde_bytes = "0.11"
serde = { version = "1", features = ["derive"] }
shell-words = "1"
structopt = { version = "0.3", default-features = false }
tempfile = "3"
varbincode = "0.1"

# fuse
thread-scoped = "1.0.2"

# fuse-sys
[build-dependencies]
pkg-config = "0.3.14"
